# mutual_gaze_detector

./: .gitignore  .gitmodules  README.md
config/: host_config.txt  k4a_install_on_ubuntu_22_04.sh  requirements.txt
docker/: 99-k4a.rules  Dockerfile  Dockerfile_full  Dockerfile_test  README.md  README_Docker.md  docker-compose-test-win.yml  docker-compose-test.yml  docker-compose.yml  mutual_gaze_detector_node.py
non_ros/users_landmarks_utils/: README.md  pyproject.toml
non_ros/users_landmarks_utils/src/users_landmarks_utils/: calibration_utils.py  face_landmarks_groups.py  kinect_bt_utils.py  landmarks_naming.py  landmarks_preprocessing.py  landmarks_preprocessing_sklearn.py
ros/mutual_gaze_detector/: package.xml  setup.cfg  setup.py
ros/mutual_gaze_detector/launch/: mutual_gaze_detector.launch.xml
ros/mutual_gaze_detector/mutual_gaze_detector/: mutual_gaze_detector_node.py
ros/mutual_gaze_detector_msgs/: CMakeLists.txt  README.md  package.xml
ros/mutual_gaze_detector_msgs/msg/: MutualGazeOutput.msg
ros/mutual_gaze_detector_ros/: package.xml  setup.cfg  setup.py
ros/mutual_gaze_detector_ros/classifier_weights/: classifier_weight.txt
ros/mutual_gaze_detector_ros/launch/: mutual_gaze_detector_ros.launch.xml
ros/mutual_gaze_detector_ros/mutual_gaze_detector_ros/: mutual_gaze_detector_node.py
ros/users_landmarks_msgs/: CMakeLists.txt  README.md  package.xml
ros/users_landmarks_msgs/msg/: MultipleUsersLandmarks.msg  SingleUserLandmarks.msg
ros/users_landmarks_ros_utils/: package.xml  setup.cfg  setup.py
ros/users_landmarks_ros_utils/launch/: gravity_aligned_rgb_frame_publisher.launch.xml
ros/users_landmarks_ros_utils/users_landmarks_ros_utils/: gravity_aligned_rgb_frame_publisher_node.py
ros/users_landmarks_tracking/: package.xml  setup.cfg  setup.py
ros/users_landmarks_tracking/config/: face_landmarks.yaml
ros/users_landmarks_tracking/launch/: users_landmarks_tracking.launch.py  users_landmarks_tracking.launch.xml
ros/users_landmarks_tracking/users_landmarks_tracking/: face_landmarks_node.py
ros/users_landmarks_tracking/users_landmarks_tracking/FaceLandmarksExtractor/: Face.py  FacesLandmarksExtractor.py
