<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>users_landmarks_tracking</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="simone.arreghini@supsi.ch">Simone Arreghini</maintainer>
  <license>TODO: License declaration</license>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>azure_kinect_ros_msgs</exec_depend>
  <exec_depend>users_landmarks_msgs</exec_depend>
  <exec_depend>users_landmarks_ros_utils</exec_depend>

  <exec_depend>cv_bridge</exec_depend>  

</package>
